--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0'
 apply plugin: 'application'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -12,6 +13,6 @@ repositories {
 mainClassName = "pl.laskowski.marcin.playground.Main"
 
 dependencies {
-    compile fileTree(dir: 'lib', include: '*.jar')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation fileTree(dir: 'lib', include: '*.jar')
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
