--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ sat4j = "2.3.6"
 
 [libraries]
 junit5-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit5" }
-junit5-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit5" }
+junit5-platform = {module = "org.junit.platform:junit-platform-launcher" }
 junit5-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit5" }
 kotest = { module = "io.kotest:kotest-assertions-core", version = "5.9.1" }
 mockk = { module = "io.mockk:mockk", version = "1.13.13" }
