--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,7 @@
   "extends": [
     "config:base"
   ],
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "automerge": true,
+  "automergeType": "branch"
 }
