--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,11 @@ junit5-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "ju
 junit5-platform = {module = "org.junit.platform:junit-platform-launcher" }
 junit5-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit5" }
 kotest = { module = "io.kotest:kotest-assertions-core", version = "5.9.1" }
-mockk = { module = "io.mockk:mockk", version = "1.13.13" }
+mockk = { module = "io.mockk:mockk", version = "1.13.12" }
 sat4j = { module = "org.ow2.sat4j:org.ow2.sat4j.core", version.ref = "sat4j" }
 
 [plugins]
 axion = { id = "pl.allegro.tech.build.axion-release", version = "1.18.15" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kover = { id = "org.jetbrains.kotlinx.kover", version = "0.9.0-RC" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version = "1.23.7" }
