--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ detekt = "1.23.7"
 junit5 = "5.11.3"
 kotest = "5.9.1"
 kotlin = "2.1.0"
-kover = "0.9.0-RC"
+kover = "0.9.0"
 mockk = "1.13.13"
 sat4j = "2.3.6"
 
