--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
-name: "Check project health"
-on: push
+name: "Build"
+on:
+  push:
+    branches:
+      - '**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,5 +20,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build app
+      - name: Build project
         run: ./gradlew build
