--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -1,8 +1,7 @@
 name: "Publishing"
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [ published ]
 jobs:
   build:
     runs-on: ubuntu-latest
