--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx1000m -XX:+UseParallelGC -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.vfs.watch=true
+org.gradle.configuration-cache=true
