--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.jvmargs=-Xmx1000m -XX:+UseParallelGC -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configuration-cache=true
+
+kotlin.code.style=official
