--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -23,7 +23,7 @@ jobs:
         run: ./gradlew build
 
       - name: Publish project
-        run: ./gradlew publishAndReleaseToMavenCentral
+        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
