Feedback from CLI implementation

--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -29,3 +29,10 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_PRIVATE_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_PRIVATE_KEY_PASSWORD }}
+
+      - name: Attach release artifacts
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            cli/build/distributions/kudoku.tar
+            cli/build/distributions/kudoku.zip
