--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,12 +13,16 @@ sat4j = "2.3.6"
 [libraries]
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-junit5-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit5" }
-junit5-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit5" }
+junit5 = { module = "org.junit.jupiter:junit-jupiter" }
+junit5-bom = { module = "org.junit:junit-bom", version.ref = "junit5" }
+junit5-params = { module = "org.junit.jupiter:junit-jupiter-params" }
 junit5-platform = { module = "org.junit.platform:junit-platform-launcher" }
 kotest = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 sat4j = { module = "org.ow2.sat4j:org.ow2.sat4j.core", version.ref = "sat4j" }
+
+[bundles]
+junit5 = [ "junit5", "junit5-params" ]
 
 [plugins]
 axion = { id = "pl.allegro.tech.build.axion-release", version.ref = "axion" }
