--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 axion = "1.21.1"
-clikt = "5.0.3"
-detekt = "1.23.8"
+clikt = "5.1.0"
+detekt = "2.0.0-alpha.2"
+detekt-plugins = "1.23.8"
 junit5 = "6.0.2"
 kotest = "6.1.3"
-kotlin = "2.2.21"
+kotlin = "2.3.10"
 kotlinx-coroutines = "1.10.2"
 kover = "0.9.6"
 maven-publish = "0.36.0"
@@ -15,7 +16,7 @@ sat4j = "2.3.6"
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
-detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt-plugins" }
 junit5 = { module = "org.junit.jupiter:junit-jupiter" }
 junit5-bom = { module = "org.junit:junit-bom", version.ref = "junit5" }
 junit5-params = { module = "org.junit.jupiter:junit-jupiter-params" }
@@ -29,7 +30,7 @@ junit5 = [ "junit5", "junit5-params" ]
 
 [plugins]
 axion = { id = "pl.allegro.tech.build.axion-release", version.ref = "axion" }
-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+detekt = { id = "dev.detekt", version.ref = "detekt" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
